--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -7,8 +7,14 @@
 
     <div class="row">
         <div class="col">
+            <a href="{{ path('home')}}" class="btn btn-primary btn-block my-3">Retourner à l'accueil</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             <div class="dropdown">
-                <a role="button" class="btn btn-primary btn-block my-3 dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a role="button" class="btn btn-primary btn-block mb-3 dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Gérer un commerce
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
