--- a/templates/shop/list-sub-categories.html.twig
+++ b/templates/shop/list-sub-categories.html.twig
@@ -4,7 +4,7 @@
     <h3 class="text-white">Selectionnez une action:</h3>
     <div class="row">
         <div class="col">
-            <a href="{{ path('shop_manage-shop',{'id':current_shop.id}) }}" class="btn btn-primary btn-block my-3">Retour au magasin</a>
+            <a href="{{ path('shop_manage-shop',{'id':current_shop.id}) }}" class="btn btn-primary btn-block my-3">Retour a l'aperçu web</a>
         </div>
     </div>
     <div class="row border-bottom border-info">
