--- a/templates/product/layout/productPresentation.html.twig
+++ b/templates/product/layout/productPresentation.html.twig
@@ -1,22 +1,48 @@
-<!-- products must be defined in the controller then loop to get product -->
-<div class="row border-top border-info p-3 product">
-    <div class="col-12 col-md-3">
-        <img class="w-100" src="{{ asset('images/' ~ item.picture )}}" alt="photo du produit">
+<!-- item must be defined in the controller then loop to get product -->
+<div class="row border-bottom border-info product align-items-center pb-2 text-left">
+    <div class="col-12 col-lg-3">
+        <img class="mw-100 mh-100" src="{{ asset('images/' ~ item.picture )}}" height="100" alt="photo du produit">
     </div>
-    <div class="col-12 col-md-6">
-        <h5 class="card-title">{{ item.title }}</h5>
+    <div class="col-12 col-lg-6">
+        <h5 class="card-title mt-2">Nom du produit: {{ item.title }}</h5>
+        <h6>Déscription:</h6>
         <p class="card-text">{{ item.designation }} </p>
     </div>
-    <div class="col-12 col-md-3">
-        <p>{{ item.price }} €</p>
-        {% if item.stock > 0 %}
-            <p class="text-success">en stock</p>
-        {% else %}
-            <p class="text-danger">en rupture</p>    
-        {% endif %}
+    <div class="col-12 col-lg-3 mt-2">
+        <p>Prix: {{ item.price }} €</p>
+        
         {% if controller_name == 'home' %}
-        <a href="#" class="btn btn-primary">Ajouter au panier</a>
-        {% endif %}     
+            <div>
+                {% if item.stock > 0 %}
+                    <p class="text-success">en stock</p>
+                {% else %}
+                    <p class="text-danger">en rupture</p>    
+                {% endif %}
+                {% if item.stock != 0 %}
+                    {% if app.user.id is defined %}
+                        <form action="{{ path('add-cart',{'shop':current_shop.id,'user':app.user.id,'product':item.id}) }}" method="GET" class="form-group">
+                            <select name="quantity" id="quantity-select" class="form-control">
+                                <option value="0">Quantité</option>
+                                {% set i = 0 %}
+                                {% for i in 0..item.stock %}
+                                <option value="{{ i }}">{{ i }}</option>
+                                {% endfor %}
+                            </select>
+                            <button class="btn btn-primary mt-2">Ajouter au panier</button>
+                        </form>
+                    {% else %}
+                        <a class="btn btn-primary mt-2" href=" {{ path('app_login')}} ">Ajouter au panier</a>
+                    {% endif %}
+                {% endif %}
+            </div>
+        {% else %}
+            <div><p>Stock actuel: {{ item.stock }}</p></div>
+            <div>
+                <a href="{{ path('shop_edit-product',{'shop':current_shop.id,'product':item.id})}}" class="btn btn-warning text-white mt-1">Modifier</a>
+                <a href="" class="btn btn-danger mt-1">Supprimer</a>
+            </div>
+            
+        {% endif %}  
     </div>  
 </div>
 
