--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,7 +31,7 @@
     </div>
     <div class="row border-bottom border-info">
         <div class="col">
-            <a href="{{ path('ordered') }}" class="btn btn-primary btn-block mb-3">Consulter mon panier {% if nb_product_in_cart is defined %}({{ nb_product_in_cart }}){% endif %}</a>
+            <a href="{{ path('ordered-by-home') }}" class="btn btn-primary btn-block mb-3">Consulter mon panier {% if nb_product_in_cart is defined %}({{ nb_product_in_cart }}){% endif %}</a>
         </div>
     </div>
   {% endif %}
