--- a/templates/shop/userViewInsideShop.html.twig
+++ b/templates/shop/userViewInsideShop.html.twig
@@ -20,7 +20,7 @@
     </div>
     <div class="row border-bottom border-info">
         <div class="col">
-            <a href="{{ path('ordered') }}" class="btn btn-primary btn-block mb-3">Consulter mon panier {% if nb_product_in_cart is defined %}({{ nb_product_in_cart }}){% endif %}</a>
+            <a href="{{ path('ordered',{'id':current_shop.id}) }}" class="btn btn-primary btn-block mb-3">Consulter mon panier {% if nb_product_in_cart is defined %}({{ nb_product_in_cart }}){% endif %}</a>
         </div>
     </div>
     {% else %}
