manage cart part3 + add field recupByUser

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,28 +13,7 @@
     <button class="btn btn-primary mb-3">Rechercher</button>
     {{ form_end(formSearchTown)}}
   </div>
-  {% if app.user.roles is defined %}
-    <div class="row">
-      <div class="col">
-          <a href="#" class="btn btn-primary btn-block my-3">Consulter mon profil</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-          <a href="#" class="btn btn-primary btn-block mb-3">Commandes en attente</a>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <a href="#" class="btn btn-primary btn-block mb-3">Commandes prêtes</a>
-        </div>
-    </div>
-    <div class="row border-bottom border-info">
-        <div class="col">
-            <a href="{{ path('ordered-by-home') }}" class="btn btn-primary btn-block mb-3">Consulter mon panier {% if nb_product_in_cart is defined %}({{ nb_product_in_cart }}){% endif %}</a>
-        </div>
-    </div>
-  {% endif %}
+  {% include 'user/layout/navUserSideBar.html.twig' %}
   <ul class="mt-4 text-white">
     {% for category in categories %}
       <li>{{ category.nameCategory }}</li>
