--- a/templates/ordered/layout/cartProductPresentation.html.twig
+++ b/templates/ordered/layout/cartProductPresentation.html.twig
@@ -1,7 +1,6 @@
 <div class="container">
     {% set j = 0 %}
     <h2 class="mt-3">Votre commande numéro {{ items[j].ordered.id }} au magasin {{ items[j].product.shop.nameShop }}</h2>
-    {% set j = j + 1  %}
     {% for message in app.flashes('notice') %}
         <div class="flash-notice alert alert-danger">
             {{ message }}
@@ -40,7 +39,7 @@
                                 <div class="col-4">
                                     <label for="quantity-select">Qté</label>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-8">
                                     <select name="quantity" id="quantity-select" class="form-control">
                                         {% set i = 1 %}
                                         {% for i in 1..item.product.stock %}
@@ -71,7 +70,7 @@
                     </tr>
                 {% endfor %}
                 <tr>
-                    <td colspan="4" class="bg-danger text-warning">
+                    <td colspan="{{ (items[j].product.stock != 0 ) ? 4 : 3 }}" class="bg-danger text-warning">
                         Attention votre commande n'a pas encore été validé !
                     </td>
                     <td colspan="2" class="text-right">Total de la commande : </td>
@@ -82,4 +81,5 @@
         </table>
     </div>
     <hr>  
+    {% set j = j + 1  %}
 </div>
