--- a/templates/product/layout/productPresentation.html.twig
+++ b/templates/product/layout/productPresentation.html.twig
@@ -45,7 +45,7 @@
             <div><p>Stock actuel: {{ item.stock }}</p></div>
             <div>
                 <a href="{{ path('shop_edit-product',{'shop':current_shop.id,'product':item.id})}}" class="btn btn-warning text-white mt-1">Modifier</a>
-                <a href="" class="btn btn-danger mt-1">Supprimer</a>
+                <a href="{{ path('shop_not-visible-product',{'id':item.id}) }}" class="btn btn-danger mt-1">Supprimer</a>
             </div>
             
         {% endif %}  
