--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -26,8 +26,8 @@
                     <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                   </li>
                 {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Inscription</a>
+                  <li class="nav-item {% if (current_menu is defined and current_menu == 'register') %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('register') }}">Inscription</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link {% if (current_menu is defined and current_menu == 'login') %}active{% endif %}" href="{{ path('app_login') }}">Se connecter</a>
