--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -51,7 +51,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="mt-4">Bienvenue {{ current_user.firstName }} sur votre espace de gestion !!!</h1> 
-    {% include 'shop/layout/shopCardTemplate.html.twig' %}
+        <h1 class="my-4">Bienvenue {{ current_user.firstName }} sur votre espace de gestion !!!</h1> 
+        {% include 'shop/layout/shopCardTemplate.html.twig' %}  
 {% endblock %}
 
